# parallel-det

./: .gitignore  CMakeLists.txt  MPIEnv.cpp  MPIEnv.h  README.md  det_maths.cpp  det_maths.h  det_parallel.hpp  main.cpp  mpimain.cpp  stats.py  time_measurement.hpp
resources/: matrix.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrixGenerator.m  matrix_3x3.txt  matrix_4x4.txt  matrix_5x5.txt  matrix_6x6.txt  matrix_7x7.txt  matrix_big.txt  matrix_medium.txt  matrix_small.txt  matrix_verybig.txt  matrix_verysmall.txt
